# lm-auditing-test

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Meta-Llama-3-8B-Instruct_continuations.json  README.md  analyse_distance.py  analyze_distance.py  arguments.py  check_json_data.py  clear_hf_cache.py  closeness_test.py  config.yml  configure_working_environment.sh  continuations.json  dataloader.py  environment.yml  eval_trainer.py  evaluate_model.py  evalute_model.py  generate_and_evaluate.py  high_toxicity_indices.json  high_toxicity_indices_imputed.json  logging_config.py  main.py  medium_evaluate_model.py  output.txt  output1.txt  output3.txt  output_new.txt  output_very_small.txt  plot_means_and_distances.py  plots.py  push_to_wandb.py  pyproject.toml  requirements.txt  reset_working_environment.sh  run_all_checkpoints.sh  run_all_cluster_models.sh  run_all_tests.sh  (+14 more)
analysis/: analyze.py  analyze_old.py  nn_for_nn_distance.py  plot.py  plot_mean_toxicity_for_checkpoints.py  plotting_config.yml
auditing_test/: calibration_strategies.py  dataloader.py  epsilon_strategies.py  eval.py  eval_trainer.py  evaltrainer.py  experiments.py  preprocessing.py  preprocessing_SuperNI.py  preprocessing_task.py  preprocessing_translation_SNI.py  test.py
behavior_evaluation/: analyse_distance.py  analyze.py  analyze_tests.py  distance.py  distance_and_variation.py  evaluate_model.py  neural_net_distance.py  nn_for_nn_distance.py  plot.py  plot_and_analyze_test_results.py  plotting_config.yml  variation.py
closeness_testing/: closeness_test.py
configs/: config.yaml  experiment_config.py  peft_models.yaml  training.yaml
dah_testing/: betting_score.py  dataloader.py  eval_trainer.py  preprocessing.py
dav_testing/: eval_trainer.py
dpo/: dpo-sample-cli.py
evaluation/: analyze.py  distance.py  plot.py  result_analysis.ipynb
extra_plots/: same_mean_std_different_fct.py
nvllytxc/: tox_scores.json
setup_utils/: configure_working_environment.sh  environment.yaml  environment.yml
sni/: extract-cli.py
src/: hf_dataset.py  run_fold_sizes.sh
toy_test/: gaussian_difference.py  test.py
utils/: check_json_data.py  download_from_wandb.py  generate.py  generate_and_evaluate.py  push_to_wandb.py  remove_unused_epoch_key.py  score.py  utils.py  (+1 more)
(+155 files in other folders)
