[project]
name = "lm-auditing-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "richterleo", email = "richter.leo94@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
